--- a/article_IP.tex
+++ b/article_IP.tex
@@ -426,13 +426,27 @@
 \subsection{Анализ результатов}
 
 Оценка отношений расчётной и фактической скоростей передачи сообщений. 
-Исследование фактической скорости передачи данных осуществлялось для разных протоколов маршрутизации и малом времени существования сети. Для сравнения были исследованиы протоколы маршрутизации в беспроводных mesh сетях OLSR, DSDV, AODV и протокол HWMP, разработанный специально для 802.11s. В эксперименте использовался UPD трафик передаваемый со скоростями 8, 32, 64, 128,512, 1024, 2048 Кбит/сек. Зависимость реальной скорости передачи от скорости передачи данных в сети представлена на рис. 5.
+Исследование фактической скорости передачи данных осуществлялось для разных протоколов маршрутизации и малом времени существования сети. Для сравнения были исследованиы протоколы маршрутизации в беспроводных mesh сетях OLSR, DSDV, AODV и протокол HWMP, разработанный специально для 802.11s. В эксперименте использовался UPD трафик передаваемый со скоростями 8, 32, 64, 128,512, 1024, 2048 Кбит/сек. Зависимость реальной скорости передачи от скорости передачи данных в сети представлена на рис.~\ref{fig:speed_protocol}.
  
-Рисунок 5. Фактическая скорость передачи данных для разных протоколов маршрутизации.
+\begin{figure}[!ht]
+% \vspace{-0.2cm}
+ \centering{
+ \epsfig{file = speed_protocol, width = 6cm}
+ \caption{ Фактическая скорость передачи данных для разных протоколов маршрутизации.}
+ \label{fig:speed_protocol}}
+% \vspace{-0.1cm}
+\end{figure}
 
-На рисунке 6 показано отношение фактической скорости передачи данных к реальной. 
+На рисунке~\ref{fig:speed_fact} показано отношение фактической скорости передачи данных к реальной. 
 
-Рисунок 6. Отношение расчётной и фактической скоростей передачи данных.
+\begin{figure}[!ht]
+% \vspace{-0.2cm}
+ \centering{
+ \epsfig{file = speed_fact.eps, width = 6cm}
+ \caption{Отношение расчётной и фактической скоростей передачи данных.}
+ \label{fig:speed_fact}}
+% \vspace{-0.1cm}
+\end{figure}
 
 Фактическая скорость передачи данных в мобильной сети ниже рассчётной по причине генерации служебного трафика, необходимого протоколам маршрутизации для поддержки актуальности данных о состоянии топологии сети. Интервал падения фактической скорости составляет 5-37\%. Значительное падение реальной скорости передачи данных (до 37\%) наблюдается при скоростях более 1024 Кб/сек, которая необходима при передаче медиаданных. Наилучшие результаты на потоках большой интенсивности демонстрируют протоколы AODV, DSDV. Для передачи коротких сообщений с малой интенсивностью наибольшую скорость демонстрирует протокол HWMP.
 
@@ -456,9 +470,16 @@
 
 \end{itemize}
 
-На рисунке рис. 7 приведен процент потерянных сообщений от узла 802.11s сети к облачной среде для разных протоколов беспроводной маршрутизации (OLSR, HWMP, DSDV, AODV). 
+На рисунке рисунок~\ref{fig:speed_lost} приведен процент потерянных сообщений от узла 802.11s сети к облачной среде для разных протоколов беспроводной маршрутизации (OLSR, HWMP, DSDV, AODV). 
  
-Рисунок 7. Процент потерянных сообщений
+\begin{figure}[!ht]
+% \vspace{-0.2cm}
+ \centering{
+ \epsfig{file = speed_lost.eps, width = 6cm}
+ \caption{Процент потерянных сообщений.}
+ \label{fig:speed_lost}}
+% \vspace{-0.1cm}
+\end{figure}
 
 Диапазон потерянных сообщений составляет 10 - 46\%. С увеличением скорости передачи он возрастаем примерно в три раза. Наибольшие потери сообщений возникают при использовании протокола OLSR, который не следует использовать для передачи потоковых данных без применения усложнённых механизмов передачи.
 
@@ -487,17 +508,33 @@
 В рамках данной работы проводились исследования возможности доставки экстренного сообщения от аварийного автомобиля до автомобиля, оснащённого интерфейсом ЭРА--ГЛОНАСС при условии соединения аварийного автомобиля с мобильной mesh-сетью средствами 802.11s. на участке 4-х полосного шоссе протяжённостью 800 метров.
 В первом эксперименте определялся процент потерь сообщений от максимальной скорости движения автомобилей при разной плотности потока автомобилей оснащённых интерфейсом 802.11s.(рис.2).
 
-2 машины на 100 метров и одна машина на 100 метров шоссе.рис 2.
+2 машины на 100 метров и одна машина на 100 метров шоссе. \ref{fig:alarm_densety}.
  
-Рис.2 Зависимость процент потерь доставки сообщения от аварийного автомобиля от плотности движения автомобилей. 
+\begin{figure}[!ht]
+% \vspace{-0.2cm}
+ \centering{
+ \epsfig{file = alarm_densety.eps, width = 6cm}
+ \caption{Зависимость процент потерь доставки сообщения от аварийного автомобиля от плотности движения автомобилей.}
+ \label{fig:alarm_densety}}
+% \vspace{-0.1cm}
+\end{figure}
 
-Зависиость на рис.2 показывает, что при скорости движения автомобиля 100 миль в час и плотности движения 1 или 2 машины на 100 метров трассы, практически все переданные сообщения не доходят до адресата. Процент потерь сотавляет 78-92\%. Из этого следует, что при таком режиме движения необходимо либо увеличивать плотность машин находящихся в радиусе действия передатчика mesh (802.11s), либо создавать больше альтернативных путей доставки сообщений. Другим вариантом решения проблемы с небольшой плотностью машин, оснащенных передатчиками 802.11s, является использование альтернативной технологии передачи - DSRC или использование прямых глобальных каналов точка-точка (LTE, WiMAX).
+Зависиость на рис~\ref{fig:alarm_densety} показывает, что при скорости движения автомобиля 100 миль в час и плотности движения 1 или 2 машины на 100 метров трассы, практически все переданные сообщения не доходят до адресата. Процент потерь сотавляет 78-92\%. Из этого следует, что при таком режиме движения необходимо либо увеличивать плотность машин находящихся в радиусе действия передатчика mesh (802.11s), либо создавать больше альтернативных путей доставки сообщений. Другим вариантом решения проблемы с небольшой плотностью машин, оснащенных передатчиками 802.11s, является использование альтернативной технологии передачи - DSRC или использование прямых глобальных каналов точка-точка (LTE, WiMAX).
 
 Во втором эксперименте проводилось исследование возможности доставки сообщения от аварийного автомобиля, неоснащённого оборудованием ЭРА-ГЛОНАСС, средствами 802.11s до хотя бы одного автомобиля оборудованного 802.11s и ЭРА-ГЛОНАСС на участке 4-х полосного шоссе протяжённостью 800 метров (рис.3). 
 
-Рис. 3 Зависимость доставленных сообщений от скорости движения автомобиля и числа автомобилей оснащенными устройствами ЭРА-ГЛОНАСС.
+\begin{figure}[!ht]
+% \vspace{-0.2cm}
+ \centering{
+ \epsfig{file = alarm_speed.eps, width = 6cm}
+ \caption{Зависимость доставленных сообщений от скорости движения автомобиля и числа автомобилей оснащенными устройствами ЭРА-ГЛОНАСС.}
+ \label{fig:alarm_speed}}
+% \vspace{-0.1cm}
+\end{figure}
 
-На рисунке 3 приведена зависимость процента потерь сообщений при плотности потока автомобилей, оснащённых интерфейсом 802.11s, --- 2 машины на 100 метров и при оснащённости потока автомобилей интерфейсом ЭРА-ГЛОНАСС на 25\%, 12\%, 6\%, 3\%.
+Зависимость доставленных сообщений от скорости движения автомобиля и числа автомобилей оснащенными устройствами ЭРА-ГЛОНАСС.
+
+На рисунке~\ref{fig:alarm_speed} приведена зависимость процента потерь сообщений при плотности потока автомобилей, оснащённых интерфейсом 802.11s, --- 2 машины на 100 метров и при оснащённости потока автомобилей интерфейсом ЭРА-ГЛОНАСС на 25\%, 12\%, 6\%, 3\%.
 
 Анализ полученных зависимостей позволяет сделать вывод, что использование протоколов для организации mesh сетей(802.11s) повышает достоверность доставки сообщений до узлов содержащих устройства ЭРА-ГЛОНАСС при оснащении устройствами ЭРА-ГЛОНАСС не менее 25\% автомобилей. В противном случае теряется более 50\% переданных сообщений, и тогда целесообразно использовать альтернативные протоколы отправки сообщений в облако, такие как DSRC (при наличии покрытия дороги) и LTE.
 
