--- a/article_IP.tex
+++ b/article_IP.tex
@@ -1,16 +1,24 @@
-\documentclass[a5paper,10pt,oneside]{article}
+\documentclass[a5paper,10pt,oneside, draft]{article}
+
 \usepackage[cp1251]{inputenc}
+
 \usepackage[T2A]{fontenc}
+
 \usepackage[english,russian]{babel}
+
 \usepackage{pscyr}
 
 \usepackage{epsfig}
 
 % Меняем поля страницы
 \usepackage{geometry}
+
 \geometry{left=1.7cm}
+
 \geometry{right=1.7cm}
+
 \geometry{top=1.5cm}
+
 \geometry{bottom=1.7cm}
 
 %допустимость пустых строк
@@ -21,9 +29,41 @@
 
 \begin{document}
 
-Идея: мобильный абонент хочет работать как и стационарный, чтобы сохранялся доступ ко всем службам и сервисам доступных посредством сетей передачи данных.
+\begin{center}
+
+{\large {\bf НАЗВАНИЕ СТАТЬИ НАЗВАНИЕ СТАТЬИ НАЗВАНИЕ СТАТЬИ  НАЗВАНИЕ СТАТЬИ}}\\[8pt]
+
+{\sc Глазунов В.В., Курочкин Л.М., Курочкин М.А., Попов С.Г.}\\[8pt]
+
+\end{center}
+
+\hrule
+
+\medskip
+
+\noindent {\bf УДК} ХХХ.ХХ, ХХХ.ХХ
+
+{\small
+
+\noindent {\it Глазунов В.В., Курочкин Л.М., Курочкин М.А., Попов С.Г}{\bf Название сатьти название статьи название статьи название статьи.}
+
+\noindent {\bf Аннотация.} Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк, Текст аннотации не менее 8 строк.
+
+\noindent {\bf Ключевые слова.} автомобильные сервисы, автомобильные сети, протоколы передачи данных, моделирование, ns--3.
+
+\medskip
+
+\noindent {\it Глазунов В.В., Курочкин Л.М., Курочкин М.А., Попов С.Г}{\bf Atricle title Atricle title Atricle title Atricle title Atricle title Atricle title.}
+
+\noindent {\bf Abstract.} Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min.
+
+\noindent {\bf Keywords.} Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords.
+
+} % end small
 
 \section{Введение}
+
+Идея: мобильный абонент хочет работать как и стационарный, чтобы сохранялся доступ ко всем службам и сервисам доступных посредством сетей передачи данных.
 
 Описание сервисов в мобильных mesh-сетях
 
