--- a/article_IP.tex
+++ b/article_IP.tex
@@ -20,6 +20,9 @@
 \def\baselinestretch{1.00} 
 
 \begin{document}
+\begin{center}
+{\large {\bf Исследование доступности (?) сервисов мобильных пользователей облачноориентированой избыточной мультипротокольной сети автомобилей}}
+\end{center}
 
 Идея: мобильный абонент хочет работать как и стационарный, чтобы сохранялся доступ ко всем службам и сервисам доступных посредством сетей передачи данных.
 
