--- a/article_IP.tex
+++ b/article_IP.tex
@@ -29,12 +29,7 @@
 
 \begin{document}
 \begin{center}
-{\large {\bf Исследование доступности (?) сервисов мобильных пользователей облачноориентированой избыточной мультипротокольной сети автомобилей}}
-\end{center}
-
-\begin{center}
-
-{\large {\bf НАЗВАНИЕ СТАТЬИ НАЗВАНИЕ СТАТЬИ НАЗВАНИЕ СТАТЬИ  НАЗВАНИЕ СТАТЬИ}}\\[8pt]
+{\large {\bf Исследование доступности (?) сервисов мобильных пользователей облачноориентированой избыточной мультипротокольной сети автомобилей}}\\[8pt]
 
 {\sc Глазунов В.В., Курочкин Л.М., Курочкин М.А., Попов С.Г.}\\[8pt]
 
