Перемещение в первую часть

--- a/part1.tex
+++ b/part1.tex
@@ -1,4 +1,5 @@
 \subsection{Новые направления развития информационных услуг}
+Описание сервисов в мобильных mesh-сетях
 
 Перспективные направления предоставления информационных услуг базируются на системе SYNC и предоставляют клиентам компании ФОРД следующие возможности:
 
