Исправлены названия разделов

--- a/article_IP.tex
+++ b/article_IP.tex
@@ -59,30 +59,30 @@
 
 } % end small
 
-\section{Введение: про постановку задачи}
+\section{Введение}
 \input{intro.tex}
 
-\section{Первая часть: кто такой пользователь и что такое сервисы}
+\section{Автомобильные телекоммуникационные сервисы}
 \input{part1.tex}
 
-\section{Вторая часть: какие технологии есть сегодня для обеспечения сервисов (кусок из роада)}
+\section{Телематические технологии доступа к сервисам}
+%Вторая часть: какие технологии есть сегодня для обеспечения сервисов (кусок из роада)
 \input{part2.tex}
 
-\section{Третья часть: что мы нового предложили. Многопротокольность, облачноориентированность и избыточность с картинками}
+\section{Облачно--ориентированная избыточная мультипротокольная сеть}
+%Третья часть: что мы нового предложили. Многопротокольность, облачноориентированность и избыточность с картинками
 \input{part3.tex}
 
-\section{Четвёртая часть: про среду моделирования} %Среда моделирования ns-3
+\section{Реализация среды моделирования передачи сообщений в сети автомобилей} 
+%Среда моделирования ns-3
 \input{part4.tex}
 
-\section{Пятая часть: описание экспериментов и результатов}
+\section{Исследование (?)}
 \input{part5.tex}
 
-\section{Выводы}
+\section{Заключение}
 \input{part6.tex}
 
-\section{Седьмая посвящение}
-
-\section{Восьмая литература}
-
+\section{Литература}
 
 \end{document}
