Английские имена файлов

--- a/article_IP.tex
+++ b/article_IP.tex
@@ -60,28 +60,28 @@
 } % end small
 
 \section{Введение}
-\input{intro.tex}
+\input{Введение.tex}
 
 \section{Автомобильные телекоммуникационные сервисы}
-\input{part1.tex}
+\input{Автомобильные_телекоммуникационные_сервисы.tex}
 
 \section{Телематические технологии доступа к сервисам}
 %Вторая часть: какие технологии есть сегодня для обеспечения сервисов (кусок из роада)
-\input{part2.tex}
+\input{Телематические технологии доступа к сервисам.tex}
 
 \section{Облачно--ориентированная избыточная мультипротокольная сеть}
 %Третья часть: что мы нового предложили. Многопротокольность, облачноориентированность и избыточность с картинками
-\input{part3.tex}
+\input{Облачно-ориентированная избыточная мультипротокольная сеть.tex}
 
 \section{Реализация среды моделирования передачи сообщений в сети автомобилей} 
 %Среда моделирования ns-3
-\input{part4.tex}
+\input{Реализация среды моделирования передачи сообщений в сети автомобилей.tex}
 
 \section{Исследование (?)}
-\input{part5.tex}
+\input{Исследование.tex}
 
 \section{Заключение}
-\input{part6.tex}
+\input{Заключение.tex}
 
 \section{Литература}
 
