добавлен файл auto

--- a/article_IP.tex
+++ b/article_IP.tex
@@ -60,28 +60,28 @@
 } % end small
 
 \section{Введение}
-\input{Введение.tex}
+\input{intro.tex}
 
 \section{Автомобильные телекоммуникационные сервисы}
-\input{Автомобильные_телекоммуникационные_сервисы.tex}
+\input{auto.tex}
 
 \section{Телематические технологии доступа к сервисам}
 %Вторая часть: какие технологии есть сегодня для обеспечения сервисов (кусок из роада)
-\input{Телематические технологии доступа к сервисам.tex}
+\input{telematics.tex}
 
 \section{Облачно--ориентированная избыточная мультипротокольная сеть}
 %Третья часть: что мы нового предложили. Многопротокольность, облачноориентированность и избыточность с картинками
-\input{Облачно-ориентированная избыточная мультипротокольная сеть.tex}
+\input{cloud.tex}
 
 \section{Реализация среды моделирования передачи сообщений в сети автомобилей} 
 %Среда моделирования ns-3
-\input{Реализация среды моделирования передачи сообщений в сети автомобилей.tex}
+\input{implementation.tex}
 
 \section{Исследование (?)}
-\input{Исследование.tex}
+\input{research.tex}
 
 \section{Заключение}
-\input{Заключение.tex}
+\input{conclusion.tex}
 
 \section{Литература}
 
