Последние разделы в оформлении статьи

--- a/article_IP.tex
+++ b/article_IP.tex
@@ -123,4 +123,11 @@ Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, 
 
 \section{Литература}
 
+\input{authors.tex}
+
+\input{summary.tex}
+
+
+
+
 \end{document}
