я обесцветил картинки (правда они пока в документе у меня не появляются...) и поправил 6-ю часть

--- a/research.tex
+++ b/research.tex
@@ -1,4 +1,4 @@
-\subsection{Поставновка эксперимента (разные протоколы маршрутизации)}
+\subsection{Поставновка эксперимента}
 
 Исходные данные для экспериментов.
 
@@ -6,11 +6,11 @@
 
 \begin{itemize}
 
-\item сеть 802.11s, LTE;
+\item рассматриваемые сети 802.11s, LTE;
 
 \item количество узлов сети 4-16;
 
-\item фрагмент дороги 200м x 200м - цикл с двусторонним движением;
+\item фрагмент проезжей части 800 м. с 4-я поворотами 90 градусов и с двусторонним движением;
 
 \item интенсивность передачи данных от узла к облаку 8-2048 Кбит/сек;
 
@@ -26,23 +26,22 @@
 
 \end{itemize}
 
-Заданная такими границами область значений параметров моделирования позволяет исследовать наиболее динамичные периоды существования mesh сети (короткое время жизни сети, большой диапазон интенсивности сетевого трафика, высокая интенсивность перераспределения маршрутов).
+Заданная такими границами область значений параметров моделирования позволяет исследовать наиболее динамичные периоды существования mesh сети (короткое время жизни сети, широкий диапазон интенсивности сетевого трафика, высокая интенсивность перераспределения маршрутов).
 
-\subsection{Анализ результатов}
+\subsection{Анализ результатов исследования}
 
-Оценка отношений расчётной и фактической скоростей передачи сообщений. 
-Исследование фактической скорости передачи данных осуществлялось для разных протоколов маршрутизации и малом времени существования сети. Для сравнения были исследованиы протоколы маршрутизации в беспроводных mesh сетях OLSR, DSDV, AODV и протокол HWMP, разработанный специально для 802.11s. В эксперименте использовался UPD трафик передаваемый со скоростями 8, 32, 64, 128,512, 1024, 2048 Кбит/сек. Зависимость реальной скорости передачи от скорости передачи данных в сети представлена на рис.~\ref{fig:speed_protocol}.
+\subsubsection{Оценка отношений расчётной и фактической скоростей передачи сообщений.} 
+Одной из основных причин появления отличий между реальной и рассчётной скоростями передачи данных является использование служебного трафика, в частности, необходимого для обеспечения работы протоколов маршрутизации, что особенно актуально в мобильных mesh сетей для поддержки актуальности данных о состоянии топологии сети. Исследование фактической скорости передачи данных осуществлялось для разных протоколов маршрутизации и малом времени существования сети. Для сравнения были рассмотрены следующие протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UPD трафик передаваемый со скоростями 8, 32, 64, 128,512, 1024, 2048 Кбит/сек. Зависимости фактической скорости передачи данных от используемого протокола маршрутизации и интенсивности трафика представлены на рис.~\ref{fig:speed_protocol}. На рисунке~\ref{fig:speed_fact} показано отношение фактической скорости передачи данных к реальной.
  
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
  \centering{
  \epsfig{file = speed_protocol, width = 6cm}
- \caption{ Фактическая скорость передачи данных для разных протоколов маршрутизации.}
+ \caption{ Зависимости фактической скорости передачи данных от используемого протокола маршрутизации и интенсивности трафика.}
  \label{fig:speed_protocol}}
 % \vspace{-0.1cm}
 \end{figure}
 
-На рисунке~\ref{fig:speed_fact} показано отношение фактической скорости передачи данных к реальной. 
 
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
@@ -53,29 +52,29 @@
 % \vspace{-0.1cm}
 \end{figure}
 
-Фактическая скорость передачи данных в мобильной сети ниже рассчётной по причине генерации служебного трафика, необходимого протоколам маршрутизации для поддержки актуальности данных о состоянии топологии сети. Интервал падения фактической скорости составляет 5-37\%. Значительное падение реальной скорости передачи данных (до 37\%) наблюдается при скоростях более 1024 Кб/сек, которая необходима при передаче медиаданных. Наилучшие результаты на потоках большой интенсивности демонстрируют протоколы AODV, DSDV. Для передачи коротких сообщений с малой интенсивностью наибольшую скорость демонстрирует протокол HWMP.
+Интервал падения фактической скорости составляет 5-37\%. Значительное падение реальной скорости передачи данных (до 37\%) наблюдается при скоростях более 1024 Кб/сек, которая необходима при передаче медиаданных. Наилучшие результаты на потоках большой интенсивности демонстрируют протоколы AODV, DSDV. Для передачи коротких сообщений с малой интенсивностью наибольшую скорость демонстрирует протокол HWMP.
 
-\subsection{Оценка достоверности доставки сообщений}
+\subsubsection{Оценка достоверности доставки сообщений}
  
-Достоверность доставки сообщений определялась для наиболее сложных режимов существования сети, при которых время нахождения автомобиля в сети составляет менее 1сек. Для них характерна постоянная работа протоколов маршрутизации и процент потерь сообщений может быть значительным. В процессе моделирования были учтены следующие факторы:
+Достоверность доставки сообщений определялась для наиболее сложных режимов существования сети, при которых изменение структуры сети происходит в течении 1 сек. Для данной ситуации характерна постоянная работа протоколов маршрутизации и процент потерь сообщений может быть значительным. Моделирование проводилось со следующим набором параметров:
 
 \begin{itemize}
 
-\item Число подвижных ретрансляторов подвижного узла фиксировано --- 16.
+\item Число подвижных узлов-ретрансляторов фиксировано --- 16.
 
-\item Скорость передачи сообщений (изменяется от 8 до 2048 Кбит/сек.).
+\item Скорость передачи сообщений (от 8 до 2048 Кбит/сек.).
 
-\item Размер передаваемого сообщения фиксирован и равен 1024 байт.
+\item Размер передаваемого сообщения фиксирован --- 1024 байт.
 
-\item Скорость движение подвижных узлов 50 км/час.
+\item Максимальная корость движениея узла 50 км/час.
 
-\item Фрагмент дорожной сети 200м х 200м.
+\item Фрагмент проезжей части 800м с 4-я поворотами 90 градусов.
 
-\item 4 протокола маршрутизации.
+\item 4 протокола маршрутизации: OLSR, HWMP, DSDV, AODV.
 
 \end{itemize}
 
-На рисунке рисунок~\ref{fig:speed_lost} приведен процент потерянных сообщений от узла 802.11s сети к облачной среде для разных протоколов беспроводной маршрутизации (OLSR, HWMP, DSDV, AODV). 
+На рисунке рисунок~\ref{fig:speed_lost} приведена зависимость процента потерянных сообщений от узла сети 802.11s к облачной среде при использовании различных разных протоколов беспроводной маршрутизации и сообщений разного размера. 
  
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
@@ -88,9 +87,9 @@
 
 Диапазон потерянных сообщений составляет 10 - 46\%. С увеличением скорости передачи он возрастаем примерно в три раза. Наибольшие потери сообщений возникают при использовании протокола OLSR, который не следует использовать для передачи потоковых данных без применения усложнённых механизмов передачи.
 
-\subsection{Оценка среднего значения задержки отклика от облачной среды}
+\subsubsection{Оценка среднего значения задержки отклика от облачной среды}
 
-Среднее время передачи сообщения от абонента к облаку определялась для разного числа узлов (8 и 16) для протокола маршрутизации HWMP.
+Исследование среднего времени передачи сообщения от абонента к облаку определялась для разного сетей с 8 и 16 и 16 мобильными узлами, при использовании протокола маршрутизации HWMP.
 
 В процессе моделирования были заданы следующие значения параметров:
 
@@ -102,18 +101,17 @@
 
 \item размер сообщения 1024 байт,
 
-\item фрагмент дорожной сети 200м х 200м,
+\item фрагмент четырёхполосной проезжей части 800м с 4 поворотами 90 градусов,
 
-\item скорость движения узлов до 50 км/ч.
+\item максимальная скорость движения узлов 50 км/ч.
 
 \end{itemize}
 
-Для 8 узлов, при этих параметрах, среднее время доставки сообщения от абонента в облачную среду составило 70,41 мс., а для 16 узлов 4,04 мс. Уменьшение времени доставки сообщений для 16-ти узлов в первую очередь связано с увеличением числа маршрутов передачи данных.
+Для 8 узлов (1 автомобиль на 100 м. проезжей части), при этих параметрах, среднее время доставки сообщения от абонента в облачную среду составило 70,41 мс.; для 16 узлов 4,04 мс. Уменьшение времени доставки сообщений в сети с 16-ю узлами (2 автомобиля на 100 м. проезжей части) связано возможностью построения дополнительных маршрутов передачи данных.
 
-В рамках данной работы проводились исследования возможности доставки экстренного сообщения от аварийного автомобиля до автомобиля, оснащённого интерфейсом ЭРА--ГЛОНАСС при условии соединения аварийного автомобиля с мобильной mesh-сетью средствами 802.11s. на участке 4-х полосного шоссе протяжённостью 800 метров.
-В первом эксперименте определялся процент потерь сообщений от максимальной скорости движения автомобилей при разной плотности потока автомобилей оснащённых интерфейсом 802.11s.(рис.2).
+В рамках данного эксперемента проводились исследования возможности доставки экстренного сообщения от аварийного автомобиля до автомобиля, оснащённого интерфейсом LTE для передачи экстренного сообщения в облачную среду. Передача сообщения от аварийного автомобиля возможна при условии соединения аварийного автомобиля с мобильной mesh-сетью средствами 802.11s. В первом эксперименте определялся процент потерь сообщений от максимальной скорости движения автомобилей при разной плотности потока автомобилей оснащённых интерфейсом 802.11s.(рис.9).
 
-2 машины на 100 метров и одна машина на 100 метров шоссе. \ref{fig:alarm_densety}.
+\ref{fig:alarm_densety}.
  
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
@@ -124,9 +122,9 @@
 % \vspace{-0.1cm}
 \end{figure}
 
-Зависиость на рис~\ref{fig:alarm_densety} показывает, что при скорости движения автомобиля 100 миль в час и плотности движения 1 или 2 машины на 100 метров трассы, практически все переданные сообщения не доходят до адресата. Процент потерь сотавляет 78-92\%. Из этого следует, что при таком режиме движения необходимо либо увеличивать плотность машин находящихся в радиусе действия передатчика mesh (802.11s), либо создавать больше альтернативных путей доставки сообщений. Другим вариантом решения проблемы с небольшой плотностью машин, оснащенных передатчиками 802.11s, является использование альтернативной технологии передачи - DSRC или использование прямых глобальных каналов точка-точка (LTE, WiMAX).
+Зависиость на рис~\ref{fig:alarm_densety} показывает, что при скорости движения автомобиля 100 миль в час и плотности движения 1 или 2 машины на 100 метров трассы, практически все переданные сообщения не доходят до адресата. Процент потерь сотавляет 78-92\%. Из этого следует, что при таком режиме движения необходимо либо увеличивать плотность машин находящихся в радиусе действия передатчика mesh (802.11s), что позволит использовать больше альтернативных путей доставки сообщений. Другим вариантом решения проблемы с небольшой плотностью машин, оснащенных передатчиками 802.11s, является использование альтернативной технологии передачи - DSRC или использование прямых глобальных каналов точка-точка (LTE, WiMAX).
 
-Во втором эксперименте проводилось исследование возможности доставки сообщения от аварийного автомобиля, неоснащённого оборудованием ЭРА-ГЛОНАСС, средствами 802.11s до хотя бы одного автомобиля оборудованного 802.11s и ЭРА-ГЛОНАСС на участке 4-х полосного шоссе протяжённостью 800 метров (рис.3). 
+Во втором эксперименте проводилось исследование возможности доставки сообщения от аварийного автомобиля, средствами 802.11s до хотя бы одного автомобиля оборудованного 802.11s и LTE на прямом участке 4-х полосного шоссе протяжённостью 800 метров (рис.10). 
 
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
@@ -137,9 +135,9 @@
 % \vspace{-0.1cm}
 \end{figure}
 
-Зависимость доставленных сообщений от скорости движения автомобиля и числа автомобилей оснащенными устройствами ЭРА-ГЛОНАСС.
+Зависимость процента потерь сообщений от скорости движения автомобиля и числа автомобилей оснащенными интерфейсом LTE.
 
-На рисунке~\ref{fig:alarm_speed} приведена зависимость процента потерь сообщений при плотности потока автомобилей, оснащённых интерфейсом 802.11s, --- 2 машины на 100 метров и при оснащённости потока автомобилей интерфейсом ЭРА-ГЛОНАСС на 25\%, 12\%, 6\%, 3\%.
+На рисунке~\ref{fig:alarm_speed} приведена зависимость процента потерь сообщений при плотности потока автомобилей, оснащённых интерфейсом 802.11s, --- 2 машины на 100 метров и при оснащённости потока автомобилей интерфейсом LTE на 25\%, 12\%, 6\%, 3\%.
 
-Анализ полученных зависимостей позволяет сделать вывод, что использование протоколов для организации mesh сетей(802.11s) повышает достоверность доставки сообщений до узлов содержащих устройства ЭРА-ГЛОНАСС при оснащении устройствами ЭРА-ГЛОНАСС не менее 25\% автомобилей. В противном случае теряется более 50\% переданных сообщений, и тогда целесообразно использовать альтернативные протоколы отправки сообщений в облако, такие как DSRC (при наличии покрытия дороги) и LTE.
+По результатам моделирования можно сделать вывод о том, что при оснащении устройствами LTE менее 25\% автомобилей процент потерь сообщений становится значительным уже при скорости 50 миль/час. В этом случае целесообразно использовать альтернативные протоколы отправки сообщений в облачную среду, такие как DSRC (при наличии покрытия дороги).
 
