мелкие правки 6 части

--- a/research.tex
+++ b/research.tex
@@ -12,9 +12,7 @@
 
 \item фрагмент проезжей части 800 м. с 4-я поворотами 90 градусов и с двусторонним движением;
 
-\item интенсивность передачи данных от узла к облаку 8-2048 Кбит/сек;
-
-\item максимальная скорость движения узла 50 км/ч;
+\item интенсивность передачи данных от узла к облачной среде 8-2048 Кбит/сек;
 
 \item размер сообщений 1024 байт;
 
@@ -22,7 +20,7 @@
 
 \item тип трафика TCP, UDP;
 
-\item один узел сети оснащён интерфейсом LTE (осуществляет передачу данных в облачную среду), данные от остальных участников сети передаются к нему.
+\item до четверти узлов mesh сети оснащены интерфейсом LTE (осуществляет передачу данных в облачную среду), данные от остальных участников сети передаются через них.
 
 \end{itemize}
 
@@ -31,7 +29,7 @@
 \subsection{Анализ результатов исследования}
 
 \subsubsection{Оценка отношений расчётной и фактической скоростей передачи сообщений.} 
-Одной из основных причин появления отличий между реальной и рассчётной скоростями передачи данных является использование служебного трафика, в частности, необходимого для обеспечения работы протоколов маршрутизации, что особенно актуально в мобильных mesh сетей для поддержки актуальности данных о состоянии топологии сети. Исследование фактической скорости передачи данных осуществлялось для разных протоколов маршрутизации и малом времени существования сети. Для сравнения были рассмотрены следующие протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UPD трафик передаваемый со скоростями 8, 32, 64, 128,512, 1024, 2048 Кбит/сек. Зависимости фактической скорости передачи данных от используемого протокола маршрутизации и интенсивности трафика представлены на рис.~\ref{fig:speed_protocol}. На рисунке~\ref{fig:speed_fact} показано отношение фактической скорости передачи данных к реальной.
+Одной из основных причин появления отличий между реальной и рассчётной скоростями передачи данных является использование служебного трафика, в частности, необходимого для обеспечения работы протоколов маршрутизации, что особенно актуально в мобильных mesh сетях для поддержки актуальности данных о состоянии топологии сети. Исследование фактической скорости передачи данных осуществлялось для разных протоколов маршрутизации и малом времени существования сети. Для сравнения были рассмотрены следующие протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UPD трафик передаваемый со скоростями 8, 32, 64, 128,512, 1024, 2048 Кбит/сек. Зависимости фактической скорости передачи данных от используемого протокола маршрутизации и интенсивности трафика представлены на рис.~\ref{fig:speed_protocol}. На рисунке~\ref{fig:speed_fact} показано отношение фактической скорости передачи данных к реальной.
  
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
@@ -52,11 +50,11 @@
 % \vspace{-0.1cm}
 \end{figure}
 
-Интервал падения фактической скорости составляет 5-37\%. Значительное падение реальной скорости передачи данных (до 37\%) наблюдается при скоростях более 1024 Кб/сек, которая необходима при передаче медиаданных. Наилучшие результаты на потоках большой интенсивности демонстрируют протоколы AODV, DSDV. Для передачи коротких сообщений с малой интенсивностью наибольшую скорость демонстрирует протокол HWMP.
+Интервал падения фактической скорости составляет 5-37\%. Значительное падение реальной скорости передачи данных (до 37\%) наблюдается при скоростях более 1024 Кб/сек. Наилучшие результаты на потоках большой интенсивности демонстрируют протоколы AODV, DSDV. Для передачи коротких сообщений с малой интенсивностью наилучшие результаты демонстрирует протокол HWMP.
 
 \subsubsection{Оценка достоверности доставки сообщений}
  
-Достоверность доставки сообщений определялась для наиболее сложных режимов существования сети, при которых изменение структуры сети происходит в течении 1 сек. Для данной ситуации характерна постоянная работа протоколов маршрутизации и процент потерь сообщений может быть значительным. Моделирование проводилось со следующим набором параметров:
+Достоверность доставки сообщений оценивалась для наиболее сложных случаев существования сети, в которых изменение структуры сети происходит в течении 1 сек. Для данной ситуации характерна постоянная работа протоколов маршрутизации и процент потерь сообщений может быть значительным. Моделирование проводилось со следующим набором параметров:
 
 \begin{itemize}
 
@@ -74,7 +72,7 @@
 
 \end{itemize}
 
-На рисунке рисунок~\ref{fig:speed_lost} приведена зависимость процента потерянных сообщений от узла сети 802.11s к облачной среде при использовании различных разных протоколов беспроводной маршрутизации и сообщений разного размера. 
+На рисунке рисунок~\ref{fig:speed_lost} приведена зависимость процента потерянных сообщений, передаваемых от узла сети 802.11s к облачной среде при использовании различных протоколов беспроводной маршрутизации и сообщений разного размера. 
  
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
@@ -89,7 +87,7 @@
 
 \subsubsection{Оценка среднего значения задержки отклика от облачной среды}
 
-Исследование среднего времени передачи сообщения от абонента к облаку определялась для разного сетей с 8 и 16 и 16 мобильными узлами, при использовании протокола маршрутизации HWMP.
+Исследование среднего времени передачи сообщения от абонента к облаку определялась для сетей с 8 и 16 мобильными узлами, при использовании протокола маршрутизации HWMP.
 
 В процессе моделирования были заданы следующие значения параметров:
 
@@ -101,7 +99,7 @@
 
 \item размер сообщения 1024 байт,
 
-\item фрагмент четырёхполосной проезжей части 800м с 4 поворотами 90 градусов,
+\item фрагмент четырёхполосной проезжей части 800 м. с 4 поворотами 90 градусов,
 
 \item максимальная скорость движения узлов 50 км/ч.
 
@@ -117,7 +115,7 @@
 % \vspace{-0.2cm}
  \centering{
  \epsfig{file = alarm_densety.eps, width = 6cm}
- \caption{Зависимость процент потерь доставки сообщения от аварийного автомобиля от плотности движения автомобилей.}
+ \caption{Зависимость процента потерь сообщений, передаваемых аварийным автомобилем, от плотности и скорости движения автомобилей.}
  \label{fig:alarm_densety}}
 % \vspace{-0.1cm}
 \end{figure}
@@ -130,7 +128,7 @@
 % \vspace{-0.2cm}
  \centering{
  \epsfig{file = alarm_speed.eps, width = 6cm}
- \caption{Зависимость доставленных сообщений от скорости движения автомобиля и числа автомобилей оснащенными устройствами ЭРА-ГЛОНАСС.}
+ \caption{Зависимость доставленных сообщений от скорости движения автомобиля и числа автомобилей оснащенными интерфейсом LTE.}
  \label{fig:alarm_speed}}
 % \vspace{-0.1cm}
 \end{figure}
